--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
-
+/* Test for css branch */
 /* ------------------------NEW------------------------------------------- */
 
 /* Define variables for light mode colors */
