--- a/src/components/Subject/Subject.css
+++ b/src/components/Subject/Subject.css
@@ -35,7 +35,7 @@
 .field {
 	background-color: transparent;
 	border: none;
-	width: 5em;
-	padding: 0;
+	padding: 3px;
 	margin: 0;
+	outline-color: rgba(0, 0, 0, 0.174);
 }
