--- a/src/components/Headings/Headings.css
+++ b/src/components/Headings/Headings.css
@@ -8,7 +8,8 @@
 	border-radius: 1em;
 	margin: 5px 0;
 	border: solid 1px rgb(223, 223, 223);
-	color: var(--secondary-color);
+	/* color: var(--secondary-color); */
+
 	background-color: var(--primary-color);
 	justify-content: space-between;
 	border-bottom-left-radius: 0;
