--- a/src/components/AddButton/AddButton.css
+++ b/src/components/AddButton/AddButton.css
@@ -3,8 +3,18 @@
 	align-items: center;
 	justify-content: center;
 	transition: transform 100ms ease-out, background-color 100ms ease-out;
+	padding: 0em auto;
 }
-
+.add-button.bubble-element {
+	padding: 0.5em 2em;
+}
 .add-button:active {
 	transform: scale(0.97);
+}
+.add-icon {
+	height: 30px;
+	width: 30px;
+	margin: 0 5px;
+	cursor: pointer;
+	filter: invert(100%);
 }
